syntax = "proto3";
package apihttp;

option go_package="github.com/robinbryce/apikeystore/apihttp;apihttp";

message APIKey {
  bytes derived_secret = 1;
  string derived_secret_alg = 2;
  string display_name = 3;
  bytes user_id = 4;
  string audience = 5;
  string scopes = 6;
}

message CreateRequest {
  string display_name = 1;
  string audience = 2;
  string scopes = 3;
}

message CreateResult {
  bytes apikey = 1;
}

service APIKeyStore {
    rpc Create(CreateRequest) returns (CreateResult) { }
}
